# harbr-app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clean.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  building-on-macos.md  building-on-windows.md
macos/: README.md  Step1-Prerequisites.sh  Step2-Build.sh
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/daemon/: auth.rs  error.rs  log_collector.rs  mod.rs
src-tauri/src/daemon/routes/: mod.rs
src-tauri/src/daemon/routes/compose/: mod.rs
src-tauri/src/daemon/routes/containers/: crud.rs  logs.rs  mod.rs  settings.rs  stats.rs  terminal.rs
src-tauri/src/daemon/routes/events/: mod.rs
src-tauri/src/daemon/routes/groups/: mod.rs
src-tauri/src/daemon/routes/health/: mod.rs
src-tauri/src/daemon/routes/images/: mod.rs
src-tauri/src/daemon/routes/info/: mod.rs
src-tauri/src/daemon/routes/logs/: mod.rs  search.rs
src-tauri/src/daemon/routes/networks/: mod.rs
src-tauri/src/daemon/routes/volumes/: mod.rs
src-tauri/src/db/: compose.rs  groups.rs  logs.rs  mod.rs  settings.rs
src/components/: terminal-panel.tsx
src/hooks/: use-compose-logs.ts  use-compose-output.ts  use-compose-pending.ts  use-confirm.tsx  use-container-logs.ts  use-container-stats.ts  use-events.ts  (+5 more)
windows/: README.md  Step1-Prerequisites.ps1  Step2-Build.ps1
(+81 files in other folders)
