[package]
name = "harbr"
version = "0.1.0"
description = "A Podman-based Docker Desktop alternative — native, fast, no forced sign-ins"
authors = ["Harbr Contributors"]
repository = "https://github.com/harbr-hq/harbr"
homepage = "https://harbr.app"
license = "MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harbr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Non Tauri project dependencies
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bollard = "0.20"
futures-util = "0.3"
tokio-util = "0.7"
rand = "0.10"
dirs = "6"
surrealdb = { version = "3", features = ["kv-surrealkv"] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
arboard = "3"
